--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet",
     "lint:fix": "yarn lint --fix"
   },
@@ -54,6 +54,7 @@
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-prettier": "^3.3.0",
     "node-sass": "^4.0.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "react-app-rewired": "^2.1.8"
   }
 }
